--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>Dale - Start Bootstrap Theme</title>
+    <title>Batman!! - Start Bootstrap Theme</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="http://ironsummitmedia.github.io/startbootstrap-agency/css/bootstrap.min.css" rel="stylesheet">
